--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fitai",
+  "name": "temp-fitness-app",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,28 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.4",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "expo-localization": "~14.8.3",
-    "i18n-js": "^4.3.2",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "react-native-reanimated": "~3.6.2",
-    "expo-camera": "~14.0.5",
-    "expo-sensors": "~12.9.1",
-    "expo-notifications": "~0.27.6",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "react-native-calendars": "^1.1303.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "expo": "~53.0.9",
+    "expo-camera": "^16.1.6",
+    "expo-localization": "^16.1.5",
+    "expo-notifications": "^0.31.2",
+    "expo-sensors": "^14.1.4",
+    "expo-status-bar": "~2.2.3",
+    "i18n-js": "^4.5.1",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-reanimated": "^3.17.5",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "typescript": "^5.1.3"
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3"
   },
   "private": true
 }
