--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-firebase/app": "^22.2.0",
+    "@react-native-firebase/auth": "^22.2.0",
+    "@react-native-firebase/firestore": "^22.2.0",
     "@react-navigation/native": "^7.1.9",
     "@react-navigation/native-stack": "^7.3.13",
     "expo": "~53.0.9",
@@ -19,6 +22,7 @@
     "expo-notifications": "^0.31.2",
     "expo-sensors": "^14.1.4",
     "expo-status-bar": "~2.2.3",
+    "firebase": "^11.8.1",
     "i18n-js": "^4.5.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
