--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.10.0"
+    "react-native-screens": "^4.10.0",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
