--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/cli-platform-ios": "^18.0.0",
     "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.13",
     "@react-navigation/native": "^7.1.9",
@@ -16,6 +17,7 @@
     "expo": "~53.0.9",
     "expo-camera": "^16.1.6",
     "expo-localization": "^16.1.5",
+    "expo-location": "^18.1.5",
     "expo-notifications": "^0.31.2",
     "expo-sensors": "^14.1.4",
     "expo-status-bar": "~2.2.3",
@@ -23,12 +25,14 @@
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-maps": "^1.7.1",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~19.0.10",
     "typescript": "~5.8.3"
   },
